# ANN

./: .gitignore  README.md  doc.typ  pyproject.toml
src/: lib.py  main.py  multilayer_perceptron.py  perceptron.py  plot.py
