[project]
name = "nn-hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"certifi>=2025.8.3",
	"flet>=0.28.3",
	"matplotlib>=3.10.6",
]

[dependency-groups]
dev = [
	"flet[all]>=0.28.3",
]

[tool.flet.app]
path = "src"

# Fix build error
[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"
